# Cardinal

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
src/: application.cc  application.h  main.cc
src/draw/: framebuffer.cc  framebuffer.h  renderer.cc  renderer.h
src/gui/: manager.cc  manager.h
src/platform/: platform.cc  platform.h
